[gd_scene load_steps=8 format=3 uid="uid://b2n82oepk2umt"]

[ext_resource type="Script" path="res://script/apple_tree.gd" id="1_kjtfj"]
[ext_resource type="Texture2D" uid="uid://dkm7g21o8oxgq" path="res://art/environment/survivalgame-appletree.png" id="2_458lq"]
[ext_resource type="Resource" uid="uid://ch165rrb0cmel" path="res://inventory/items/apple.tres" id="2_onf8y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o6bt6"]
atlas = ExtResource("2_458lq")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoeux"]
atlas = ExtResource("2_458lq")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_ttwcx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6bt6")
}],
"loop": true,
"name": &"apples",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoeux")
}],
"loop": true,
"name": &"no_apples",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2vws0"]
radius = 38.6005

[node name="apple_tree" type="Node2D"]
script = ExtResource("1_kjtfj")
item = ExtResource("2_onf8y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ttwcx")
animation = &"no_apples"

[node name="pickable_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
shape = SubResource("CircleShape2D_2vws0")

[node name="growth_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="pickable_area" to="." method="OnPickableAreaBodyEntered"]
[connection signal="body_exited" from="pickable_area" to="." method="OnPickableAreaBodyExited"]
[connection signal="timeout" from="growth_timer" to="." method="OnGrowthTimerTimeout"]
